Fixed mobilee menu not showing up in front of everything else when opened

--- a/components/App/MobileMenu/style.module.css
+++ b/components/App/MobileMenu/style.module.css
@@ -16,7 +16,6 @@
 
     width: 100vw;
     height: 100vh;
-    z-index: 50;
     
     display: flex;
     flex-flow: column;
